--- a/main-css-dev-olmo-v2.css
+++ b/main-css-dev-olmo-v2.css
@@ -1,4 +1,5 @@
 /* For all */
+                                                                        /* MAIN CSS IS FOR 1140 WIDTH */
 * {
     padding: 0;
     margin: 0;
@@ -36,6 +37,12 @@ body {
     font-weight: bold;
 }
 
+.a-dark-color-bold2 {
+    text-decoration: none;
+    color: #6c757d;
+    font-weight: bold;
+}
+
 .a-no-decoration {
     text-decoration: none;
 }
@@ -57,19 +64,32 @@ body {
     /*margin-bottom: 1rem; */
 }
 
+.black-color {
+    color: black;
+}
+
 
 /* -------------------------------------------------------------------------------------- */
 
 /*                                                                        Header classes */
+
+header {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 17px;
+    color: #2c3e50;
+    font-weight: 500;
+    background-color: #fff !important;
+    border-bottom: 3px solid hsl(0, 8%, 93%);
+}
+
 .header-container {
     display: flex;
-    background-color: #fff;
-    width: 100%;
+    width: 80%;
     height: 10vh;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 3px solid pink;
-    ;
 }
 
 .header-fixed {
@@ -78,27 +98,26 @@ body {
 }
 
 .header-logo {
-    width: 30%;
+    width: 20%;
 }
 
 .header-img {
     max-height: 38px;
 }
 
-                                                                              /* HEADER NAV */
+/* HEADER NAV */
 
-                                                                              
+
 
 .header-nav {
     display: flex;
     justify-content: center;
-    
     width: 70%;
 }
 
 .topnav .icon {
     display: none;
-  }
+}
 
 .headerul {
     display: flex;
@@ -118,7 +137,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0.2rem;
+    border-radius: 0.5rem;
     border: 0px;
     color: #fff !important;
     background-color: #0195ff !important;
@@ -155,14 +174,14 @@ li {
 }
 
 /* nie użyty na razie */
-                                                                              /* GENERAL SECTIONS IN MAIN   */
+/* GENERAL SECTIONS IN MAIN   */
 
 .main-container-places-row {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 90%;
-   
+
 }
 
 .main-container-places-column {
@@ -171,34 +190,41 @@ li {
     align-items: center;
     justify-content: center;
     width: 90%;
-   
+
 }
 
 /*                                                 i tak jak kuba napisał zrobic headery w divach coby zmieniac ich wielkosci tekstu. klasy headerów pierwszych tu*/
 
-                                                                              /* H1 H2 H3  */
+/* H1 H2 H3  */
 
 .h1-font-size {
     font-size: 3.375rem;
     text-align: center;
+    color: #2f353e;
 }
 
 .h2-font-size-first {
     font-size: 1.25rem;
     text-align: center;
+    color: #6c757d;
+    font-weight: 400;
 }
 
 .h2-font-size-second {
     font-size: 2.625rem;
     text-align: center;
+    color: #2f353e;
+    font-weight: 600;
 }
 
-                                                                              /* PRICE OFFER */
+/* PRICE OFFER */
 .main-prices-container-place-and-width-row {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
 }
 
 .main-price-1-window-container {
@@ -219,25 +245,157 @@ li {
     box-shadow: 10px 10px 8px #e6e6e8;
     height: 95%;
     width: 95%;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    gap: 1rem;
 }
+
+
+.abonament-and-discount-space-beetween {
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+    height: 10%;
+}
+
+.abonament-font {
+    font-size: 1.3125rem;
+    font-weight: bold;
+    color: #2f353e;
+}
+
+.discount-look {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
+    background-color: hsl(0, 24%, 96%);
+    width: 8rem;
+    padding: 5px;
+    font-weight: bold;
+    font-size: 1rem;
+    height: 2rem;
+}
+
+.discount-look-popular {
+    display: flex;
+    justify-content: center;
+    border-radius: 1rem;
+    background-color: #0195ff !important;
+    color: white !important;
+    width: 8rem;
+    padding: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+    height: 2rem;
+}
+
+.price-window-line {
+    width: 85%;
+    border: 0.1px solid hsl(0, 4%, 90%);
+}
+
+.cost-per-month-flex-start {
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+}
+
+
+.price-dolar-font {
+    font-size: 3rem;
+    font-weight: bold;
+    color: black;
+}
+
+.price-month-font {
+    color: #878787;
+    font-weight: 400;
+    font-size: 1.2rem;
+    padding-bottom: 1rem
+}
+
+.price-dollar-month-row-flex {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+
+.abonament-offer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 85%;
+    height: 30%;
+}
+
+.abonament-offer-row {
+    display: flex;
+    gap: 1rem;
+    font-weight: bold;
+    font-size: 1.125rem;
+}
+
+.abonament-offer-font {
+    font-weight: 100;
+    margin-left: -8px;
+}
+
+.abonament-for-button-container {
+    display: flex;
+    justify-content: flex-start;
+    width: 85%;
+    align-items: center;
+    height: 15%;
+}
+
+.abonament-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.2rem;
+    border: 0.2px solid #b8b6b6 !important;
+    color: rgb(0, 0, 0) !important;
+    background-color: #fff !important;
+    width: 150px;
+    height: 40px;
+    font-size: 16px;
+    line-height: 60px;
+    font-weight: 600;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+
+
+/* HEADER UNDER PRICES */
+
 
 .h2-under-prices-section-container {
     display: flex;
     height: 10rem;
 }
 
-                                                                              /* TABLE */
+/* TABLE */
+
+
+
+.table-offer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+
 table {
     border-collapse: collapse;
     width: 95%;
 }
 
-.table-offer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-}
 
 th {
     border-bottom: 1px solid hsl(0, 0%, 0%);
@@ -260,13 +418,13 @@ td {
     height: 20px;
 }
 
-                                                                              /* SECOND MAIN HEADER  */
+/* THIRD MAIN HEADER SECTRION  */
 .main-p-under-table-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 2rem;
+    margin: 3rem;
 }
 
 .main-p-under-table-font {
@@ -278,14 +436,13 @@ td {
     text-align: center;
 }
 
-                                                                              /* PAYMENT METODS SECTION   */
+/* PAYMENT METODS SECTION   */
 
 
 .main-container-places-row-space-between {
     display: flex;
     justify-content: space-between;
     width: 90%;
-    
     gap: 1rem;
 }
 
@@ -303,6 +460,7 @@ h3 {
     font-weight: bold;
     color: black;
     font-size: 1.125rem;
+    width: 100%;
     /*margin-bottom: 1rem;*/
 }
 
@@ -317,6 +475,7 @@ h3 {
     height: 3rem;
     width: 3rem;
 }
+
 .main-money-guarantee-SSL-first-text-width {
     display: flex;
     flex-direction: column;
@@ -338,32 +497,31 @@ h3 {
     width: 85%;
 }
 
-                                                                              /* FREE TRAIL SECTION   */
+/* FREE TRAIL SECTION   */
 
-.main-container-row-for-trail{
+.main-container-row-for-trail {
     display: flex;
     justify-content: center;
     align-items: center;
-   
     width: 92%;
-    }
-
-.main-trail-container-heigh-flex {
-  height: 23rem;
-  display: flex;
-  align-items: center;
-  width: 100%;
 }
 
-.main-trail-div-width-header-and-buttons-look
-{   display: flex;
+.main-trail-container-heigh-flex {
+    height: 23rem;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.main-trail-div-width-header-and-buttons-look {
+    display: flex;
     justify-content: center;
     border: 0.2px solid hsl(0, 8%, 93%);
     border-radius: 1rem;
     background-color: #fff !important;
     box-shadow: 10px 10px 8px #e6e6e8;
     height: 13rem;
-    width: 100%; 
+    width: 100%;
 }
 
 
@@ -372,7 +530,7 @@ h3 {
     justify-content: flex-start;
     align-items: center;
     width: 95%;
-   
+
 }
 
 .main-trail-header-flex {
@@ -387,10 +545,14 @@ h3 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width:35%;
+    width: 35%;
     gap: 1rem;
 }
-.main-trail-get-started-button-place {border: 1px solid rebeccapurple; display: flex; align-items: flex-end;}
+
+.main-trail-get-started-button-place {
+    display: flex;
+    align-items: flex-end;
+}
 
 .trail-button {
     display: flex;
@@ -413,21 +575,27 @@ h3 {
 
 .main-trail-header-font-size {
     font-size: 2.375rem;
+    color: #2f353e;
 }
 
 #a3:visited {
     color: #6c757d;
 }
 
-                                                                              /* GOT QUESTIONS? SECTION */
-
-.main-first-h4-font-size{
-    font-size: 1.25rem;
-    text-align: center;
-    width: 65%;
+#a2:visited {
+    color: #6c757d;
 }
 
-                                                                              /* "FAQ" SECTION */
+/* GOT QUESTIONS? SECTION */
+
+.main-first-h4-font-size {
+    font-size: 1.25rem;
+    text-align: center;
+    width: 60%;
+    font-weight: 500;
+}
+
+/* "FAQ" SECTION */
 
 .faq-height-and-flex-container {
     height: 45rem;
@@ -438,32 +606,34 @@ h3 {
 }
 
 .faq-column-container {
-width: 100%;
-height: 70%;
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 1rem;
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
 }
 
 .faq-div-container-for-header-and-p {
     display: flex;
-    gap: 1rem;
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
-  
+    gap: 1rem;
+
 }
 
 
-.faq-h5  {
+.faq-h5 {
     height: 20%;
     font-size: 1.375rem;
+    color: #2f353e;
+    font-weight: 600;
 }
 
 .faq-p {
     font-size: 1.1875rem;
-    
+
 }
 
 .faq-p-list {
@@ -474,27 +644,36 @@ gap: 1rem;
 
 .faq-li {
     margin-left: 20px;
-  
+
 }
 
-                                                                              /* LAST HEADER SECTION  */
+/* LAST HEADER SECTION  */
 
 .last-header-section-container {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    font-weight: 400 ;
+    font-weight: 400;
     height: 7rem;
     gap: 0.2rem;
 }
 
-.last-header-section-font-size {
+.last-header-section-font-size1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.375rem;
+    color: black;
+}
+
+.last-header-section-font-size2 {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.375rem;
 }
+
 .nosize {
     display: flex;
     width: auto;
@@ -528,7 +707,16 @@ gap: 1rem;
     width: 90%;
 }
 
-                                                                                  /* FOOTER HEADER SECTION */ 
+/* FOOTER HEADER SECTION */
+
+
+footer {
+    background: linear-gradient(180deg, #e9ebf0, #fbfbfd);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
 
 .footer-header-size-container {
     height: 20rem;
@@ -542,6 +730,7 @@ gap: 1rem;
     height: 10rem;
     width: 70%;
 }
+
 .footer-header-flex-place {
     display: flex;
     flex-direction: column;
@@ -552,18 +741,19 @@ gap: 1rem;
 .footer-h4 {
     font-size: 1.25rem;
     text-align: center;
-    width: 85%;
+    width: 90%;
     font-weight: 100;
 }
 
-                                                                              /* FOOTER OPINIONS SECTION */ 
+/* FOOTER OPINIONS SECTION */
 
-                                                                              /* FOOTER MENU SECTION */ 
+/* FOOTER MENU SECTION */
 
 .footer-menu-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
 }
 
 .footer-menu-logo-with-text-container {
@@ -571,12 +761,16 @@ gap: 1rem;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 28%;
-    height: 90%;
+    width: 40%;
+    height: 100%;
+}
+
+.footer-text-under-logo-font {
+    font-size: 1.125rem;
 }
 
 .footer-logo-img {
-    height: 50px;
+    height: 35px;
     width: 120px;
 }
 
@@ -585,6 +779,24 @@ gap: 1rem;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    gap: 0.5rem;
+}
+
+.footer-for-mobile-container0 {
+    display: flex;
+    width: 100%;
+}
+
+.footer-for-mobile-container1 {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
+.footer-for-mobile-container2 {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
 }
 
 .footer-line {
@@ -599,19 +811,32 @@ gap: 1rem;
     background-color: transparent;
 }
 
-                                                                              /* FOOTER SM SECTION */ 
+/* FOOTER SM SECTION */
 
 .footer-social-media-sectrion-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    margin-bottom: 2rem;
 }
+
+.footer-div-rigts-reserver {
+    display: flex;
+    width: 100%;
+}
+
+.footer-social-media-space-around {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    width: 100%;
+}
+
+
 
 
 
 /* -------------------------------------------------------------------------------------- */
 
 /*                                                                        Test space*/
-
-
