--- a/mobile-css-dev-olmo-v2.css
+++ b/mobile-css-dev-olmo-v2.css
@@ -1,5 +1,5 @@
-/*                                                                        min-width 992px to max-width 1199.95px classes */
-
+                                                                        /*min-width 992px to max-width 1199.95px classes */
+                                                                        /* ONLY THIS  */
 @media (min-width: 768px) and (max-width: 1199.95px) {
     .h1-font-size {
         font-size: 2.8rem;
@@ -11,18 +11,29 @@
 
 }
 
-/* ----------------------------------------------------------------------------------------------- */
+/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
-/*                                                                        max-width 768px classes */
+/*                                                                        MAX-WIDTH  768px  CLASSES                                                                               */
+
+/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 
 @media screen and (max-width: 768px) {
- 
-
-    /*                                                                          Header classes */
 
 
-    /*                                                                           Main classes */
+    /* ----------------------------------------------------------------------------------------------- */
+    /*                                                                                 Header classes */
+    /*
+                               N
+                                O
+                                 N
+                                  E
+    */
+    /* ----------------------------------------------------------------------------------------------- */
+    /* ----------------------------------------------------------------                    Main classes */
+
+
+
 
     .h1-font-size {
         font-size: 2.55rem;
@@ -32,31 +43,285 @@
         font-size: 1.05rem;
     }
 
-    /*                                                                             Footer classes */
+    .h2-font-size-second {
+        font-size: 2rem;
+    }
+
+    /* PRICE OFFER SECTRION */
+    .main-price-windows-look {
+        padding: 0.2rem;
+    }
+
+    .main-prices-container-place-and-width-row {
+        gap: 1rem;
+    }
+
+    .abonament-and-discount-space-beetween {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 1rem;
+    }
+
+
+    .price-dollar-month-row-flex {
+        justify-content: center;
+        align-items: center;
+        gap: 0.5rem;
+    }
+
+    .abonament-font {
+        font-size: 1.15rem;
+    }
+
+    .discount-look {
+        height: 1rem;
+        width: 5rem;
+        align-items: center;
+    }
+
+    .discount-look-popular {
+        height: 1rem;
+        width: 5rem;
+        align-items: center;
+    }
+
+    .price-dolar-font {
+        font-size: 2.1rem;
+    }
+
+    .price-month-font {
+        font-size: 1rem;
+        padding-top: 2rem;
+    }
+
+    /* THIRD MAIN HEADER */
+
+    .main-p-under-table-container {
+        width: 100%;
+    }
+
+    .main-p-under-table-font {
+        font-size: 1rem;
+        width: 100%;
+    }
+
+    /* PAYMENT METODS SECTION   */
+
+    .main-container-places-row-space-between {
+        gap: 0rem;
+        justify-content: center;
+        width: 95%;
+    }
+
+    .main-payment-metods {
+        width: 100%;
+    }
+
+    .main-payment-h3-bold {
+        font-size: 1.07rem;
+        width: 110%;
+    }
+
+    .bold-and-font-size {
+        font-size: 1.07rem;
+        width: 100%;
+    }
+
+    .main-payment-images-container {
+        gap: 0.4rem;
+    }
+
+    .main-payment-images-size {
+        display: flex;
+        height: 2rem;
+        width: 2rem;
+    }
+
+    .main-money-guarantee-SSL-p-font-size {
+        font-size: 0.95rem;
+    }
+
+    .main-money-guarantee-SSL-first-text-width {
+        width: 50%;
+    }
+
+    .main-money-guarantee-SSL-second-text {
+        width: 50%;
+    }
+
+    /* FREE TRAIL SECTION   */
+
+    .main-trail-container-heigh-flex {
+        height: 30rem;
+    }
+
+    .main-trail-div-width-header-and-buttons-look {
+        height: 20rem;
+    }
+
+    .main-header-and-button-div-inside-div-for-look {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .main-trail-header-font-size {
+        font-size: 1.8rem;
+        text-align: center;
+        width: 90%;
+    }
+
+
+
+    /* GOT QUESTIONS? SECTION */
+
+    .main-first-h4-font-size {
+        font-size: 1.05rem;
+        width: 85%;
+    }
+
+    /* FAQ SECTION */
+
+    .faq-height-and-flex-container {
+        margin-top: 2rem;
+        flex-direction: column;
+        height: 60rem;
+        gap: 0;
+    }
+
+    .faq-column-container {
+        height: 100%;
+        justify-content: flex-start;
+    }
+
+    .faq-div-container-for-header-and-p {
+        gap: 1rem;
+    }
+
+    .faq-h5 {
+        font-size: 1.175rem;
+        width: 100%;
+    }
+
+    .faq-p {
+        font-size: 1.05rem;
+        width: 95%;
+        margin-bottom: 1rem;
+    }
+
+    .faq-p-list {
+        height: auto;
+        top: 0;
+    }
+
+    /* LAST HEADER SECTION */
+
+    .last-header-section-font-size1 {
+        font-size: 1.175rem;
+    }
+
+    .last-header-section-font-size2 {
+        font-size: 1.175rem;
+    }
+
+    /* ----------------------------------------------------------------------------------------------- */
+
+    /*                                                                                  Footer classes */
+
+
+
+
+    /* FOOTER HEADER SECTION */
+
+    .footer-header-container {
+        width: 90%;
+    }
+
+
+    .footer-h4 {
+        font-size: 1.05rem;
+    }
+
+
+    /* FOOTER MENU SECTION */
+    .footer-menu-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .footer-menu-logo-with-text-container {
+        width: 100%;
+    }
+
+
+    .footer-for-mobile-container1 {
+
+        width: 100%;
+        justify-content: flex-start;
+        gap: 4rem;
+        align-items: center;
+        width: 100%;
+    }
+
+    .footer-for-mobile-container0 {
+        display: flex;
+        gap: 1rem;
+    }
+
+    .footer-for-mobile-container2 {
+
+        width: 100%;
+        justify-content: flex-start;
+        gap: 4rem;
+        width: 100%;
+        height: 100%;
+    }
+
+    .footer-text-under-logo-font {
+        font-size: 1.05rem;
+        width: 85%;
+    }
+
+
 }
 
 
 
 
-/* ----------------------------------------------------------------------------------------------- */
+/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
-/*                                                                        max-width 426px classes */
+/*                                                                        MAX-WIDTH  426PX  CLASSES                                                                               */
 
+/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 
 
 @media screen and (max-width: 426px) {
 
-    
 
-  
+
+
     /* ----------------------------------------------------------------------------------------------- */
     /*                                                                                 Header classes */
 
+    .header-container {
+        justify-content: space-between;
+    }
+
+    .header-logo {
+        width: 20%;
+    }
+
+
+    .header-nav {
+        width: 20%;
+    }
 
 
 
-     /* ----------------------------------------------------------------------------------------------- */
+    /* ----------------------------------------------------------------------------------------------- */
     /* ----------------------------------------------------------------                    Main classes */
 
     .h1-font-size {
@@ -81,7 +346,6 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-   
         width: 95%;
     }
 
@@ -90,7 +354,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
         width: 95%;
     }
 
@@ -98,7 +361,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-       height: 95%;
+        height: 100%;
+        gap: 4rem;
     }
 
     .main-price-1-window-container {
@@ -113,22 +377,44 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         border: 0.2px solid hsl(0, 8%, 93%);
         border-radius: 1rem;
         background-color: #fff !important;
         box-shadow: 10px 10px 8px #e6e6e8;
     }
 
+    .cost-per-month-flex-start {
+        align-items: center;
+    }
+
+    .price-dollar-month-row-flex {
+        justify-content: center;
+    }
+
+    .abonament-offer-container {
+        align-items: center;
+    }
+
+    .abonament-for-button-container {
+        justify-content: center;
+    }
+
+
+    /* HEADER UNDER PRICES */
+
     .h2-under-prices-section-container {
         height: 5rem;
     }
+
+    /* TABLE */
 
     table {
         border-collapse: collapse;
         width: 100%;
         height: 100%;
-        }
-    
+    }
+
     .table-offer {
         display: flex;
         justify-content: space-around;
@@ -142,6 +428,25 @@
         font-size: 0.9375rem;
     }
 
+    /* MAIN P UNDER TABLE */
+
+    .main-p-under-table-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 3rem;
+    }
+
+    .main-p-under-table-font {
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+        font-size: 0.9375rem;
+        width: 85%;
+        text-align: center;
+    }
+
     /* PAYMENT METODS SECTION */
 
     .main-container-places-row-space-between {
@@ -150,39 +455,70 @@
         width: 95%;
     }
 
+    .abonament-and-discount-space-beetween {
+        justify-content: space-around;
+    }
+
     .main-payment-metods {
         align-items: center;
+    }
+
+    .main-payment-h3-bold {
+        font-size: 1.07rem;
+        width: 100%;
+        text-align: center;
     }
 
     .main-money-guarantee-SSL-first-text-width {
         width: 100%;
         align-items: center;
         margin-left: 0;
-        }
-    .main-money-guarantee-SSL-first-text-width p{
-        text-align: center;
-        width: 100%;
-        font-size: 0.9375rem;
-    }
-    .main-money-guarantee-SSL-first-text-width h3 {
-       text-align: center;
     }
 
-    .main-money-guarantee-SSL-second-text  {
-        width: 100%;
-        align-items: center;
-    }
-
-    .main-money-guarantee-SSL-second-text  p {
+    .main-money-guarantee-SSL-first-text-width p {
         text-align: center;
         width: 95%;
         font-size: 0.9375rem;
     }
 
-    .main-money-guarantee-SSL-second-text  h3 {
+    .main-money-guarantee-SSL-first-text-width h3 {
         text-align: center;
     }
- 
+
+    .main-money-guarantee-SSL-second-text {
+        width: 100%;
+        align-items: center;
+    }
+
+    .main-money-guarantee-SSL-second-text p {
+        text-align: center;
+        width: 90%;
+        font-size: 0.9375rem;
+    }
+
+    .main-money-guarantee-SSL-second-text h3 {
+        text-align: center;
+    }
+
+    .price-dolar-font {
+        font-size: 2.85rem;
+    }
+
+    .price-month-font {
+        font-size: 1.25rem;
+    }
+
+    .main-payment-images-container {
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 0.8rem;
+    }
+
+    .main-payment-images-size {
+        display: flex;
+        height: 3rem;
+        width: 3rem;
+    }
 
     /* FREE TRAIL SECTION   */
 
@@ -204,7 +540,7 @@
         flex-direction: column;
         height: 20rem;
         align-items: center;
-        
+
     }
 
     .main-header-and-button-div-inside-div-for-look {
@@ -217,7 +553,7 @@
         text-align: center;
         font-size: 1.55rem;
     }
-    
+
     /* GOT QUESTIONS? SECTION */
 
 
@@ -232,52 +568,56 @@
     }
 
     /* "FAQ" SECTION */
-    
+
 
     .faq-height-and-flex-container {
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-        padding-right: 1rem;
+        margin-top: 2rem;
         flex-direction: column;
-        height: 80rem;
-        
+        height: 60rem;
+        gap: 0;
     }
 
     .faq-column-container {
         height: 100%;
+        justify-content: flex-start;
     }
 
     .faq-div-container-for-header-and-p {
         gap: 1rem;
-        height: 100%;
     }
 
     .faq-h5 {
         font-size: 1.125rem;
+        width: 100%;
     }
 
     .faq-p {
         font-size: 1rem;
+        width: 95%;
+        margin-bottom: 1rem;
     }
 
     .faq-p-list {
         height: auto;
         top: 0;
+        font-size: 1rem;
     }
 
     /* LAST HEADER SECTION  */
 
     .last-header-section-container {
-        gap: 0;
-        height: 10rem ;
+        height: 10rem;
+        padding-top: 10rem;
         flex-direction: column;
+        justify-content: center;
     }
+
     .last-header-section-font-size {
         font-size: 1.125rem;
     }
-   
 
-     /* ----------------------------------------------------------------------------------------------- */
+
+    /* ----------------------------------------------------------------------------------------------- */
 
     /*                                                                                  Footer classes */
 
@@ -292,7 +632,7 @@
         justify-content: center;
         align-items: center;
         min-width: 90%;
- 
+
     }
 
     .footer-container-places-column {
@@ -302,10 +642,10 @@
         min-width: 90%;
 
     }
-    
 
-    /* FOOTER HEADER SECTION */ 
-    
+
+    /* FOOTER HEADER SECTION */
+
     .footer-header-size-container {
         height: 15rem;
     }
@@ -318,9 +658,10 @@
         font-size: 1rem;
         width: 100%;
     }
-    /* FOOTER OPINIONS SECTION */ 
 
-      /* FOOTER MENU SECTION */ 
+    /* FOOTER OPINIONS SECTION */
+
+    /* FOOTER MENU SECTION */
     .footer-menu-container {
         flex-direction: column;
     }
@@ -330,13 +671,49 @@
     }
 
 
-    /* FOOTER SM SECTION */ 
+    .footer-for-mobile-container1 {
+
+        width: 100%;
+        justify-content: flex-start;
+        gap: 7rem;
+        align-items: center;
+    }
+
+    .footer-for-mobile-container2 {
+
+        width: 100%;
+        justify-content: flex-start;
+        gap: 7.7rem;
+        align-items: center;
+    }
+
+    .footer-for-mobile-container0 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* FOOTER SM SECTION */
 
     .footer-social-media-sectrion-container {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 2rem;
     }
 
+    .footer-div-rigts-reserver {
+        justify-content: center;
+    }
+
+    .footer-social-media-space-around {
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 100%;
+
+    }
+
+
+
 }
-
-
